# pratica-pesquisa-2024

./: Encontro_1.ipynb  README.md  encontro1.md  pyproject.toml
datasets/: Portal da Transparência Maceió - PAGAS - [01.01.2022 - 31.12.2022].csv  sample.csv  sample.json  sample.xlsx
pandas-ctf/: forms.py  main.py  schema.sql  start.py  tech_company_data.csv
pandas-ctf/templates/: base.html  conclusao.html  desafio.html  index.html  placar.html
