[tool.poetry]
name = "pratica-pesquisa-2024"
version = "0.1.0"
description = "Materiais, códigos, exemplos e mais relacionados ao \"Curso\"."
authors = ["Felipe Adeildo <contato@felipeadeildo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
fastapi = "^0.115.0"
numpy = "^2.1.1"
openpyxl = "^3.1.5"
flask = "^3.0.3"
faker = "^30.1.0"
flask-wtf = "^1.2.1"


[tool.poetry.group.dev.dependencies]
ipython = "^8.27.0"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
